# VulkanSpaceInvaders

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/androidTest/java/com/jpcottin/vulkanspaceinvaders/: SmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio.cpp  audio.h  common.h  game.cpp  game.h  glasses.cpp  glasses.h  main.cpp  vk_renderer.cpp  vk_renderer.h
app/src/main/cpp/shaders/: shape.frag  shape.vert
app/src/main/cpp/test/: audio_stub.cpp  game_test.cpp
app/src/main/java/com/jpcottin/vulkanspaceinvaders/: GlassesBridge.kt  GlassesGameActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
